@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Builder-Compiler
 
 {{$NEXT}}
+          - Add defines argument to try_compile_run
 
 0.027     2025-04-05 19:45:01+02:00 Europe/Brussels
           - Adapt to load_extension rename
